openshift/07-property-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: property-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: property-service
  template:
    metadata:
      labels:
        app: property-service
    spec:
      containers:
        - name: property-service
          image: idarezo123/property-service:latest
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: property-service
spec:
  selector:
    app: property-service
  ports:
    - port: 3002
      targetPort: 3002
