openshift/12-mobile-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobile-gateway
  template:
    metadata:
      labels:
        app: mobile-gateway
    spec:
      containers:
        - name: mobile-gateway
          image: idarezo123/mobile-gateway:latest
          ports:
            - containerPort: 4001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: mobile-gateway
spec:
  selector:
    app: mobile-gateway
  ports:
    - port: 4001
      targetPort: 4001
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mobile-gateway
spec:
  to:
    kind: Service
    name: mobile-gateway
  port:
    targetPort: 4001
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
